Dark mode styling for the placeholder prompt dialog (part of issue #264)

--- a/wx-src/pages/placeholderPrompt.css
+++ b/wx-src/pages/placeholderPrompt.css
@@ -2,15 +2,30 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-body {
-    margin: 16px;
+@import url("../style/laf.css");
+
+
+:root {
+    --color-bkgd: white;
+    --color-default-text: black;
+    --color-plchldr-table-border: #ddd;
+    --color-plchldr-table-bkgd: #eee;
 }
 
-button {
-    min-width: 88px;
-    min-height: 28px;
-    font-size: 13px !important;
-    text-align: center !important;
+@media (prefers-color-scheme: dark) {
+    :root {
+	--color-bkgd: #2a2a2e;
+	--color-default-text: #f9f9fa;
+	--color-plchldr-table-border: #4a4a4f;
+	--color-plchldr-table-bkgd: #38383d;
+    }
+}
+
+
+body {
+    margin: 16px;
+    background-color: var(--color-bkgd);
+    color: var(--color-default-text);
 }
 
 select.browser-style:focus:not(:disabled) {
@@ -54,8 +69,8 @@ select.browser-style:focus:not(:disabled) {
     max-height: 146px;
     overflow-y: auto;
     padding: 4px 8px 4px 8px;
-    border: 1px solid #ddd;
-    background-color: #eee;
+    border: 1px solid var(--color-plchldr-table-border);
+    background-color: var(--color-plchldr-table-bkgd);
 }
 
 .ph-name {
